--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
     <h1 onclick="function1()" id="title"> Ayy ! </h1>
 
 
-    <script src="folder/adventure.js">
+    <script src="js/adventure.js">
     </script>
 
   <body
