--- a/home.html
+++ b/home.html
@@ -1,13 +1,19 @@
 <html>
-<head>
-  Great Game
-</head>
-  <body>
-    <h1 onclick="function1()" id="title"> Ayy ! </h1>
+<body>
 
 
-    <script src="jscode.js">
-    </script>
+<div align="center">
+<h1 onclick="change()" id="hh">Bad
+</h1>
 
-  <body
+<button type="button" onclick="story()" id="storybegin">
+    Ready?</button>
+
+
+
+
+<script src="jscode.js">
+</script>
+</div>
+</body>
 </html>
