--- a/home.html
+++ b/home.html
@@ -1,16 +1,16 @@
 <html>
+<head>
+<title>Great Game!</title>
+<head>
 <body>
-
 
 <div align="center">
 
-
+  <h1 >Amazing Game Starts Now...</h1>
+  <hr style="height: 3px; border:none; border-top:5px double black;"/>
 
 <button type="button" onclick="story()" id="storybegin">
     Ready?</button>
-
-
-
 
 <script src="jscode.js">
 </script>
